# partial_read

./: .clangd  .gitignore  CMakeLists.txt  compile_flags.txt
exam_utils/: CMakeLists.txt
experiments/: CMakeLists.txt  main.cc
experiments/common/: common.h
experiments/utils/: paper.txt  test_suite.h  utils.cc  utils.h
libpr/: .gitignore  libzstd.so.1.5.8  zstd.h
libpr/compress/: zstd_compress.c  zstd_compress_internal.h
libpr/dll/example/: build_package.bat
scripts/: build.sh  run.sh
